--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@
 <div class="jumbotron" > 
   <h1>青阳科技</h1>
   <p class="lead">PCB电路板网上订购平台</p>
-  <p><a class="btn btn-lg btn-success" href="#" role="button">现在注册</a></p>
+  <p><a class="btn btn-lg btn-success" href="/signup" role="button">现在注册</a></p>
 </div>
 </div>
 <!-- Example row of columns -->
