--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,36 @@
 <% provide(:title, '注册') %>
 <h1>注册</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+<div class="row">
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+    <%= bootstrap_form_for(@user, layout: "horizontal" ) do |f| %>
+      <%= render 'shared/error_messages' %>
+      <%= f.text_field :email, label: "邮箱地址" %>
+
+      <%= f.text_field :mobile, label: "手机号码" %>
+
+      <%= f.password_field :password, label: "密码", help: "Must be at least 6 characters long" %>
+
+      <%= f.password_field :password_confirmation, label: "确认密码" %>
+
+      <%= f.text_field :company_name, label: "公司名称" %>
+
+      <%= f.text_field :name, label: "联系人" %>
+
+      <%= f.text_field :qq, label: "QQ号码" %>
+
+      <%= f.text_field :phone, label: "电话号码" %>
+
+      <%= f.text_field :fax, label: "传真号码" %>
+
+      <%= f.text_field :address, label: "收货地址" %>
+
+      <div class="control-group">
+        <div class="controls">
+        <%= f.submit "立即注册", class: "btn btn-default btn-primary" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
