--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,11 +3,11 @@
 
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-    <%= bootstrap_form_for(@user, layout: "horizontal" ) do |f| %>
+    <%= simple_form_for(@user, layout: "horizontal" ) do |f| %>
       <%= render 'shared/error_messages' %>
-      <%= f.text_field :email, label: "邮箱地址" %>
+      <%= f.input :email, label: t('simple_form.signup.email') %>
 
-      <%= f.text_field :mobile, label: "手机号码" %>
+      <%= f.text_field :mobile, label: "手机号码", class: "required" %>
 
       <%= f.password_field :password, label: "密码", help: "Must be at least 6 characters long" %>
 
@@ -24,13 +24,9 @@
       <%= f.text_field :fax, label: "传真号码" %>
 
       <%= f.text_field :address, label: "收货地址" %>
-
-      <div class="control-group">
-        <div class="controls">
-        <%= f.submit "立即注册", class: "btn btn-default btn-primary" %>
-        </div>
-      </div>
-    <% end %>
   </div>
+        <%= f.submit "立即注册", class: "btn btn-default btn-primary" %>
+    <% end %>
+
 </div>
 
