--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
           <div class="container">
             <ul class="nav f-9">
               <li><a href="/"><i class="icon-home icon-white"> </i></a></li>
-              <li><a href="#">登录</a></li>
+              <li><a href="/signin">登录</a></li>
               <li><a href="/signup" class="torange">注册</a></li>
             </ul>
           </div>
