--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,24 @@
           <div class="container">
             <ul class="nav f-9">
               <li><a href="/"><i class="icon-home icon-white"> </i></a></li>
+              <% if signed_in? %>
+              <li><%= link_to "Users", '#' %></li>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Account <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Profile", current_user %></li>
+                  <li><%= link_to "Settings", '#' %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to "Sign out", signout_path, method: "delete" %>
+                  </li>
+                </ul>
+              </li>
+          <% else %>
+            <li><%= link_to "Sign in", signin_path %></li>
+          <% end %>
               <li><a href="/signin">登录</a></li>
               <li><a href="/signup" class="torange">注册</a></li>
             </ul>
