--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,56 +5,20 @@
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
-
-    <!-- Bootstrap core CSS -->
-    <!--%= stylesheet_link_tag "bootstrap", "justified-nav", media: "all",
-        "data-turbolinks-track" => true %-->
-    <nav>
-      <div class="navbar navbar-inverse hidden-phone">
-        <div class="navbar-inner">
-          <div class="container">
-            <ul class="nav f-9">
-              <li><a href="/"><i class="icon-home icon-white"> </i></a></li>
-              <% if signed_in? %>
-              <li><%= link_to "Users", '#' %></li>
-              <li id="fat-menu" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  Account <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", '#' %></li>
-                  <li class="divider"></li>
-                  <li>
-                    <%= link_to "Sign out", signout_path, method: "delete" %>
-                  </li>
-                </ul>
-              </li>
-          <% else %>
-            <li><%= link_to "Sign in", signin_path %></li>
-          <% end %>
-              <li><a href="/signin">登录</a></li>
-              <li><a href="/signup" class="torange">注册</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-
+    <%= render 'layouts/shim' %>
   </head>
+      <%= render 'layouts/header' %>
   <body>
     <div class="container">
+
       <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "alert alert-#{key}") %>
-      <% end %>
-      <%= yield %>
-
-      <!-- Site footer -->
-      <div class="footer">
-        <p>&copy; 青阳科技 2014</p>
-      </div>
-
-    </div> <!-- /container -->
+        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+        <% end %>
+        <%= yield %>
+        <div>
+        <%= render 'layouts/footer' %>
+        </div>
+    </div> 
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
