create order form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+.white-text {
+    color: #FFFFFF;
+}
+
 html {
   overflow-y: scroll;
 }
@@ -97,7 +101,7 @@ p {
 
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
-  width: 100%;
+  width: auto;
   margin-bottom: 15px;
   @include box_sizing;
 }
