--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,16 +9,16 @@
             </li>
             </ul>
             <ul class="nav pull-right">
-              <li><a href="/"><i class="icon-home"> </i></a></li>
+              <li><a href="/"><i class="icon-home icon-white"> </i> <%= t('home') %></a></li>
               <% if signed_in? %>
-              <li><%= link_to "Users", '#' %></li>
+              <li><%= link_to "Users", users_path %></li>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <%= t('account') %> <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to t('profile'), current_user %></li>
-                  <li><%= link_to t('settings'), '#' %></li>
+                  <li><%= link_to t('settings'), edit_user_path(current_user) %></li>
                   <li class="divider"></li>
                   <li>
                     <%= link_to t('signout'), signout_path, method: "delete" %>
