--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,12 @@
         <div class="container">
           <ul class="nav pull-left">
             <li id="logo">
+              <span class="glyphicon glyphicon-star"></span>
               <%= t('PCB')  %>
             </li>
             </ul>
             <ul class="nav pull-right">
-              <li><a href="/"><i class="icon-home icon-white"> </i> <%= t('home') %></a></li>
+              <li><a href="/"><span class="icon-home icon-white"> </span> <%= t('home') %></a></li>
               <% if signed_in? %>
               <li><%= link_to "Users", users_path %></li>
               <li id="fat-menu" class="dropdown">
