--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,7 +28,7 @@
 
             <%= f.input :company_name, label: t('simple_form.labels.signup.company_name') , input_html: { size: 50 }%>
 
-            <%= f.input :name, label: t('simple_form.labels.signup.contactor'), input_html: { size: 50 },  placeholder:
+            <%= f.input :real_name, label: t('simple_form.labels.signup.contactor'), input_html: { size: 50 },  placeholder:
                   t('simple_form.placeholders.signup.contactor') %>
 
             <%= f.input :qq, label: t('simple_form.labels.signup.qq') ,input_html: { size: 50 } %>
