--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
             <ul class="nav pull-right">
               <li><a href="/"><span class="icon-home icon-white"> </span> <%= t('home') %></a></li>
               <% if signed_in? %>
-              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to t('users'), users_path %></li>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <%= t('account') %> <b class="caret"></b>
