--- a/app/views/orders/_calc.html.slim
+++ b/app/views/orders/_calc.html.slim
@@ -1,9 +1,7 @@
-h2 = t('simple_form.labels.order.step2')
-
-  p.alert.alert-info
-    = t('views.my_orders.orders_filtered')
-    = ', '
-    = link_to t('views.my_orders.view_all_orders'), user_orders_path
+h3 = t('simple_form.labels.order.step2')
+.progress.progress-striped.active
+  .progress-bar.progress-bar-info role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"
+    span class="sr-only" 75% Complete
 
 .bs-example
   table.table.table-striped.table-bordered.bootstrap-datatable.datatable
@@ -13,39 +11,39 @@ h2 = t('simple_form.labels.order.step2')
       tr
         td = t('simple_form.labels.order.length')
         td = @order.length
-      tr
         td = t('simple_form.labels.order.width')
         td = @order.width
         td = t('simple_form.labels.order.layer')
         td = @order.layer
+      tr
         td = t('simple_form.labels.order.amount')
         td = @order.amount
-      tr
         td = t('simple_form.labels.order.pinban_style_num')
         td = @order.pinban_style_num
         td = t('simple_form.labels.order.type')
         td = t('simple_form.placeholders.order.type')
+      tr
         td = t('simple_form.labels.order.thickness')
         td = @order.thickness
-      tr
         td = t('simple_form.labels.order.zuhan_color')
-        td = @order.zuhan_color
+        td = getValue("zh_color",@order.zuhan_color)
         td = t('simple_form.labels.order.zifu_color')
         td = @order.zifu_color
+      tr
         td = t('simple_form.labels.order.hanpan_pengdu')
         td = @order.hanpan_pengdu
-      tr
         td = t('simple_form.labels.order.zuhan_cover')
         td = @order.zuhan_cover
         td = t('simple_form.labels.order.test')
         td = @order.test
+      tr
         td = t('simple_form.labels.order.tongbo_thickness')
         td = @order.tongbo_thickness
-      tr
         td = t('simple_form.labels.order.produce_time')
         td = @order.produce_time
         td = t('simple_form.labels.order.express')
         td = @order.express
+      tr
         td = t('simple_form.labels.order.comment')
         td = @order.comment
 
@@ -93,10 +91,32 @@ button.btn.col-md-offset-1  = t('simple_form.labels.order.back')
         button{type = "button" class = "close" data-dismiss = "modal" aria-hidden = "true"} &times
         h3.modal-title#myModalLabel =t('simple_form.labels.order.modal.upload')
       .modal-body
-        .form-group
-          .lable for="uploadFile" =t('simple_form.labels.order.modal.file')
-          .input type="file" id="uploadFile"
-          p.help-block = t('simple_form.labels.order.modal.hint')
+        = form_tag('/upload', {remote: true, multipart: true}) do
+          .row.fileupload-buttonbar
+            .col-lg-7
+              .form-control
+              span class="btn btn-success fileinput-button"
+                i class="glyphicon glyphicon-plus"
+                span = t('simple_form.labels.order.form.add')
+                = file_field_tag "pcb_file"
+              button type="submit" class="btn btn-primary start"
+                i class="glyphicon glyphicon-upload"
+                span = t('simple_form.labels.order.form.start')
+              button type="reset" class="btn btn-warning cancel"
+                i class="glyphicon glyphicon-ban-circle"
+                span =('simple_form.labels.order.form.cancel')
+              button type="button" class="btn btn-danger delete"
+                i class="glyphicon glyphicon-trash"
+                span = t('simple_form.labels.order.form.delete')
+              label for="uploadFile" =t('simple_form.labels.order.modal.file')
+              input type="file" id="uploadFile"
+              p.help-block = t('simple_form.labels.order.modal.hint')
+            .col-lg-5.fileupload-progress.fade
+              .progress.progress-striped.active role="progressbar" aria-valuemin="0" aria-valuemax="100"
+                .progress-bar.progress-bar-success style="width:0%;"
+              .progress-extended &nbsp;
+            table role="presentation" class="table table-striped"
+              tbody class="files"
       .modal-footer
         button{class = "btn" data-dismiss = "modal" aria-hidden = "true"} 关闭
         button{class = "btn btn-primary"} 确认
