--- a/app/views/orders/_create_form.html.erb
+++ b/app/views/orders/_create_form.html.erb
@@ -4,8 +4,9 @@
   <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">
     <span class="sr-only">35% Complete</span>
   </div>
-</div>
+  </div>
 <%= simple_form_for(@order, remote: true, html: {  class: 'form-horizontal' }) do |f| %>
+<%= render 'shared/error_messages', object: f.object %>
 <%= f.input :length, label: t('simple_form.labels.order.length'),
     placeholder: t('simple_form.placeholders.order.length'),
     label_html: { class: 'col-md-3' } %>
@@ -33,37 +34,35 @@ label_html: { class: 'col-md-3' } %>
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :zuhan_color, as: :radio_buttons, label: t('simple_form.labels.order.zuhan_color'),
-    collection: [["绿色",1], ["红色",2], ["黄色",3], ["蓝色",4], ["白色",5], ["黑色",6], ["无",7]], checked: [1], :item_wrapper_class => "radio-inline",
+    collection: zuhan_color, checked: ["1"], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :zifu_color, as: :radio_buttons, label: t('simple_form.labels.order.zifu_color'),
-    collection: [["白色", 1], ["黑色", 2], ["无", 3]], checked: [1], :item_wrapper_class => "radio-inline",
+    collection: zifu_color, checked: [1], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :hanpan_pengdu, as: :radio_buttons, label: t('simple_form.labels.order.hanpan_pengdu'),
-    collection: [["过孔盖油", 1], ["过孔开窗",2]], checked: [1], :item_wrapper_class => "radio-inline",
+    collection: hanpan_pengdu, checked: [1], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :zuhan_cover, as: :radio_buttons, label: t('simple_form.labels.order.zuhan_cover'),
-    collection: [["有铅喷锡", 1], ["无铅喷锡", 2], ["沉金",3]], checked: [1], :item_wrapper_class => "radio-inline",
+    collection: zuhan_cover, checked: [1], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :test, as: :radio_buttons, label: t('simple_form.labels.order.test'),
-    collection: [["全部测试", 1], ["不测试", 2]], checked: [ 2 ], :item_wrapper_class => "radio-inline",
+    collection: test, checked: [ 2 ], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :tongbo_thickness, as: :radio_buttons, label: t('simple_form.labels.order.tongbo_thickness'),
-    collection: [["1/1oz", 1], ["2/2oz", 2]], checked: [1], :item_wrapper_class => "radio-inline",
+    collection: tongbo_thickness, checked: [1], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :produce_time, label: t('simple_form.labels.order.produce_time'),
-    collection: [['12小时加急', 1], ['24小时加急', 2], ['48小时加急',3], ['72小时加急', 4],
-    ['96小时加急', 5], ['正常3-4天', 6], ['正常4-5天', 7], ['正常5-6天', 8],
-    ['正常7-8天', 9 ], ['正常8-15天', 10]], include_blank: "请选择",
+    collection: produce_time, include_blank: "请选择",
     selected: [ 6 ], label_html: { class: 'col-md-3' } %>
 
 <%= f.input :need_receipt, as: :radio_buttons, label: t('simple_form.labels.order.need_receipt'),
-    collection: [["不需要", 1], ["普通发票",2], [" 增值税发票",3]], checked: [ 1 ], :item_wrapper_class => "radio-inline",
+    collection: need_receipt, checked: [ 1 ], :item_wrapper_class => "radio-inline",
 label_html: { class: 'col-md-3' } %>
 
 <%= f.input :express, label: t('simple_form.labels.order.express'),
