--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
       <div class="col-md-8 " id="content">
         <div class="panel-body col-md-7 col-md-offset-3">
           <%= simple_form_for(@user, html: {  class: 'form-horizontal' }  ) do |f| %>
-            <%= render 'shared/error_messages' %>
+            <%= render 'shared/error_messages',object: f.object %>
 
             <%= f.input :email, label: t('simple_form.labels.signup.email'), input_html: { size: 50 },
                 placeholder: t('simple_form.placeholders.signup.email') %>
